# GithubNotificator

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  config.json  github_token.txt  main.py  mutmut_config.py  pyproject.toml  repos.txt  requirements.txt  sourcery_diff.yml
.github/: flake8.yml  mypy.yml
.github/workflows/: coverage.yml  mutmut.yml  mypy.yml  ruff.yml  sourcery_entiry_project.yml
github_notificator/: __main__.py
github_notificator/collectors/: collectors.py
github_notificator/models/: PyGithubProxy.py  config.py  results.py
github_notificator/view/: html_generator.py
src/: LICENSE.md
src/github_notificator/: __main__.py
src/github_notificator/collectors/: collectors.py
src/github_notificator/models/: PyGithubProxy.py  results.py
tests/: test_discussion.py  test_html_generator.py  test_ready_for_merge.py  test_ready_for_review.py  test_results.py  test_untested.py
tests/mocks/: MockPullRequestProxy.py  MockRepositoryProxy.py
