[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GitHubNotificator"
version = "0.0.1"

dependencies = [
    "PyGithub >= 1.59.1",
    "pytest >= 7.4.0"
]

[project.scripts]
notify = "github_notificator.__main__:main"

[tool.ruff]
line-length = 120